--- a/Annuity.html
+++ b/Annuity.html
@@ -33,7 +33,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav nav-pills mr-auto" id="navbarpill">
               <li class="nav-item">
-                <a href="./index.html" class="nav-link active">Home</a>
+                <a href="./index.html" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
                 <a href="./mortgage.html" class="nav-link"
@@ -44,7 +44,9 @@
                 <a href="cd.html" class="nav-link">CD Calculator</a>
               </li>
               <li class="nav-item">
-                <a href="./annuity.html" class="nav-link">Annuity Calculator</a>
+                <a href="./annuity.html" class="nav-link active"
+                  >Annuity Calculator</a
+                >
               </li>
             </ul>
           </div>
@@ -54,7 +56,7 @@
     <main>
       <div class="container main-container">
         <!-- You should probably add a header and nav bar here... -->
-        <h1>Home</h1>
+        <h1>Annuity Calculator</h1>
         <div class="row">
           <div class="col-sm-6" id="inputs">
             <div>
