--- a/mortgage.html
+++ b/mortgage.html
@@ -33,10 +33,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav nav-pills mr-auto" id="navbarpill">
               <li class="nav-item">
-                <a href="./index.html" class="nav-link active">Home</a>
+                <a href="./index.html" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a href="./mortgage.html" class="nav-link"
+                <a href="./mortgage.html" class="nav-link active"
                   >Mortgage Calculator</a
                 >
               </li>
@@ -54,7 +54,7 @@
     <main>
       <div class="container main-container">
         <!-- You should probably add a header and nav bar here... -->
-        <h1>Home</h1>
+        <h1>Mortgage Loan Calculator</h1>
         <div class="row">
           <div class="col-sm-6" id="inputs">
             <div>
