--- a/CD.html
+++ b/CD.html
@@ -103,18 +103,16 @@
             </div>
 
             <div>
-              <button class="btn btn-primary" id="mortCalcBtn">
-                Calculate
-              </button>
+              <button class="btn btn-primary" id="cdCalcBtn">Calculate</button>
             </div>
           </div>
 
           <div class="col-sm-6" class="loan-calculator--outputs">
             <p>
-              Monthly Payment:
-              <span><strong id="monthlyPayment">$0.00</strong></span>
+              Maturity Value:
+              <span><strong id="maturityValue">$0.00</strong></span>
             </p>
-            <p>This loan will really cost you: <span id="totalCost">0</span></p>
+            <p>Interest Accrued: <span id="interestAccrued">$0</span></p>
           </div>
         </div>
       </div>
