--- a/mortgage.html
+++ b/mortgage.html
@@ -114,7 +114,9 @@
               Monthly Payment:
               <span><strong id="monthlyPayment">$0.00</strong></span>
             </p>
-            <p>This loan will really cost you: <span id="totalCost">0</span></p>
+            <p>
+              This loan will really cost you: <span id="totalCost">$0</span>
+            </p>
           </div>
         </div>
       </div>
